--- a/README.Rmd
+++ b/README.Rmd
@@ -76,10 +76,10 @@ devtools::install_github("JBC-Inc/jbcPlotnine")
           inception, a pivotal metric in assessing reservoir depletion and
           long-term yield potential.
 
-     Cum Hat/Fit: Forecasts encompassing both fitted and predictive models
-                  for cumulative production, enabling stakeholders to
-                  anticipate future reservoir dynamics and optimize extraction
-                  strategies accordingly.
+     Cum Fit: Forecasts encompassing both fitted and predictive models
+              for cumulative production, enabling stakeholders to
+              anticipate estimated ultimate recovery reservoir dynamics and 
+              optimize extraction strategies accordingly.
 
 ##### Statistical Insights:
 
@@ -120,10 +120,9 @@ devtools::install_github("JBC-Inc/jbcPlotnine")
 
 #### Usage
 
- Plotnine code was written within a virtual python environment utilizing the `reticulate` package. 
- The main plotnine code resides within: `/R/plotnine.py`
- 
- There are helper functions that assist in plotnine generation, so this script should be run beforehand. to load the environment. The actual plotnine plots are located in `/R/plots.py`. 
+  The plot was originally intended to be a stand alone python file but many technical hurdles prevented this so I decided to integrate the plot(s) into an interactive Shiny for Python web app hosted on [shinyapps.io](https://shinyapps.io). My first Python for Shiny app!
+
+ To view the completed plot visit this link: [2024 PLOTNINE CONTEST](https://kraggle.shinyapps.io/jcplotnine/)
  
  Enjoy!
  
